--- a/app/src/main/res/layout/edittext_login.xml
+++ b/app/src/main/res/layout/edittext_login.xml
@@ -50,6 +50,7 @@
             tools:text="@string/login_account" />
 
         <View
+            android:id="@+id/v_divider"
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
