[Fix] home ui & string

--- a/app/src/main/res/layout/itemview_sport_type_v4.xml
+++ b/app/src/main/res/layout/itemview_sport_type_v4.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="70dp"
     android:layout_height="60dp"
-    android:minWidth="70dp"
     android:layout_marginEnd="12dp"
+    android:minWidth="70dp"
     android:paddingStart="12dp"
     tools:ignore="RtlSymmetry,SpUsage">
 
@@ -27,7 +27,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
+        android:ellipsize="end"
         android:includeFontPadding="false"
+        android:maxLines="1"
         android:textColor="@color/selector_sport_type_item_text_v4"
         android:textSize="@dimen/textSize12sp"
         app:layout_constraintEnd_toEndOf="parent"
