--- a/app/src/main/res/layout/crypto_pay_fragment.xml
+++ b/app/src/main/res/layout/crypto_pay_fragment.xml
@@ -26,6 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
                 android:gravity="center"
+                android:background="@color/color_191919_FCFCFC"
                 android:orientation="horizontal">
 
                 <TextView
@@ -462,7 +463,7 @@
             android:background="@drawable/bg_radius_20_button_dusk"
             android:gravity="center"
             android:text="@string/submit"
-            android:textColor="@color/color_191919_FCFCFC"
+            android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize16sp"
             style="?android:attr/borderlessButtonStyle"/>
 
