--- a/app/src/main/res/layout/dialog_withdraw_password.xml
+++ b/app/src/main/res/layout/dialog_withdraw_password.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginStart="36dp"
     android:layout_marginEnd="36dp"
+    android:background="@drawable/bg_radius_8_button_white"
     android:gravity="center"
-    android:maxHeight="300dp"
-    app:cardBackgroundColor="@color/transparent_black_0"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="0dp">
+    android:maxHeight="300dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:background="@drawable/bg_radius_8_button_white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="44dp"
-            android:background="@color/color_191919_FCFCFC"
             android:gravity="center"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
@@ -151,7 +151,6 @@
             android:id="@+id/btn_confirm"
             android:layout_width="match_parent"
             android:layout_height="44dp"
-            android:background="@color/color_191919_FCFCFC"
             android:gravity="center"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
@@ -161,4 +160,4 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
