--- a/app/src/main/res/layout/online_crypto_pay_fragment.xml
+++ b/app/src/main/res/layout/online_crypto_pay_fragment.xml
@@ -33,6 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="44dp"
                 android:gravity="center"
+                android:background="@color/color_191919_FCFCFC"
                 android:orientation="horizontal">
 
                 <TextView
