[新增] 宣傳頁聯賽收合

--- a/app/src/main/res/layout/item_publicity_recommend.xml
+++ b/app/src/main/res/layout/item_publicity_recommend.xml
@@ -23,4 +23,10 @@
         tools:itemCount="1"
         tools:listitem="@layout/itemview_league_odd_v5" />
 
+    <View
+        android:id="@+id/SpaceItemDecorationView"
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:background="@color/colorWhite" />
+
 </LinearLayout>
