--- a/app/src/main/res/layout/fragment_account_history_next.xml
+++ b/app/src/main/res/layout/fragment_account_history_next.xml
@@ -28,6 +28,7 @@
             android:overScrollMode="never"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:itemCount="1"
+            android:background="@color/colorWhite1"
             tools:listitem="@layout/view_account_history_next_title_bar" />
 
     </com.scwang.smart.refresh.layout.SmartRefreshLayout>
