--- a/app/src/main/res/layout/view_account_history_next_title_bar.xml
+++ b/app/src/main/res/layout/view_account_history_next_title_bar.xml
@@ -35,6 +35,7 @@
         android:text="@string/bet_num_and_bet_date"
         android:textColor="@color/colorBlackLight"
         android:textSize="@dimen/textSize14sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/iv_bg"
         app:layout_constraintTop_toTopOf="parent" />
 
