--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -35,7 +35,7 @@
         app:tabRippleColor="@null"
         app:tabSelectedTextColor="@color/color_e5e5e5_333333"
         app:tabTextAppearance="@style/NoUppercaseTab"
-        app:tabTextColor="@color/color_A3A3A3_666666">
+        app:tabTextColor="@color/color_FFFFFF">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
