--- a/awesome-calendar/src/main/res/layout/layout_calendar_container.xml
+++ b/awesome-calendar/src/main/res/layout/layout_calendar_container.xml
@@ -3,6 +3,7 @@
     android:layout_width="wrap_content"
     android:minWidth="340dp"
     android:layout_height="260dp"
+    android:background="@color/background"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
