--- a/awesome-calendar/src/main/res/values/colors.xml
+++ b/awesome-calendar/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
 
     <!-- General -->
     <color name="selected_date_circle_color">#54B948</color>
-
+    <color name="background">#FCFCFC</color>
     <!-- Fonts -->
     <color name="title_color">#000</color>
     <color name="date_color">#000</color>
