[Fix] 23738 英文帳戶歷史頁面需修改

--- a/app/src/main/res/drawable/ic_soccer.xml
+++ b/app/src/main/res/drawable/ic_soccer.xml
@@ -3,7 +3,13 @@
     android:height="20dp"
     android:viewportWidth="20"
     android:viewportHeight="20">
-  <group>
+
+  <!-- Add padding -->
+  <group
+      android:scaleX="0.9"
+      android:scaleY="0.9"
+      android:pivotX="12"
+      android:pivotY="12">
     <clip-path
         android:pathData="M0,0H20V20H0z"/>
     <path
