--- a/app/src/main/res/layout/view_account_history_title_bar.xml
+++ b/app/src/main/res/layout/view_account_history_title_bar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorWhite"
+    android:background="@color/colorWhite1"
     android:orientation="vertical"
     tools:context="org.cxct.sportlottery.ui.main.accountHistory.next.AccountHistoryNextFragment"
     tools:ignore="SpUsage">
@@ -34,6 +34,7 @@
         android:text="@string/account_history_overview"
         android:textColor="@color/colorBlackLight"
         android:textSize="@dimen/textSize14sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/iv_bg"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -54,16 +55,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_8"
         android:layout_marginEnd="@dimen/margin_10"
-        app:drawableStartCompat="@drawable/ic_info_white"
         android:drawablePadding="@dimen/margin_6"
-        app:drawableTint="@color/colorGray"
         android:text="@string/text_us_east_time"
         android:textColor="@color/colorGray"
         android:textSize="@dimen/textSize12sp"
+        app:drawableLeftCompat="@drawable/ic_info_white"
+        app:drawableStartCompat="@drawable/ic_info_white"
+        app:drawableTint="@color/colorGray"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/status_selector"
-        app:drawableLeftCompat="@drawable/ic_info_white" />
+        app:layout_constraintTop_toBottomOf="@+id/status_selector" />
 
     <LinearLayout
         android:id="@+id/linearLayout5"
