--- a/app/src/main/res/drawable/bg_sport_type_radius_16dp_white.xml
+++ b/app/src/main/res/drawable/bg_sport_type_radius_16dp_white.xml
@@ -5,5 +5,5 @@
     <solid android:color="@color/transparent_black_0"/>
     <stroke
         android:width="1dp"
-        android:color="@color/colorWhite6"/>
+        android:color="@color/colorSilverLight"/>
 </shape>
