--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -38,8 +38,9 @@
         <androidx.drawerlayout.widget.DrawerLayout
             android:id="@+id/sub_drawer_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="68dp">
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/game_message">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
