--- a/app/src/main/res/layout/itemview_sport_type_v5.xml
+++ b/app/src/main/res/layout/itemview_sport_type_v5.xml
@@ -22,8 +22,8 @@
 
             <ImageView
                 android:id="@+id/sport_type_img"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
                 android:layout_marginStart="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +38,7 @@
                 android:layout_marginEnd="6dp"
                 android:gravity="center"
                 android:textColor="@color/selector_sport_type_item_text_v5"
-                android:textSize="@dimen/textSize14sp"
+                android:textSize="@dimen/textSize12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/sport_type_img"
                 app:layout_constraintEnd_toStartOf="@+id/sport_count_text"
                 app:layout_constraintStart_toEndOf="@+id/sport_type_img"
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:textColor="@color/selector_sport_type_item_text_v5"
-                android:textSize="@dimen/textSize14sp"
+                android:textSize="@dimen/textSize12sp"
                 app:layout_constraintBottom_toBottomOf="@+id/sport_type_img"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/sport_type_img"
