--- a/app/src/main/res/layout/dialog_self_limit_froze_important.xml
+++ b/app/src/main/res/layout/dialog_self_limit_froze_important.xml
@@ -77,7 +77,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="·"
-                    android:textColor="@color/color_333333"
+                    android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="16dp" />
 
                 <TextView
@@ -85,7 +85,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="5dp"
                     android:text="@string/self_limit_froze_impotent_1"
-                    android:textColor="@color/color_333333"
+                    android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="14dp" />
             </LinearLayout>
 
@@ -101,7 +101,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="·"
-                    android:textColor="@color/color_333333"
+                    android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="16dp" />
 
                 <TextView
@@ -109,7 +109,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="5dp"
                     android:text="@string/self_limit_froze_impotent_2"
-                    android:textColor="@color/color_333333"
+                    android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="14dp" />
             </LinearLayout>
 
@@ -125,7 +125,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="·"
-                    android:textColor="@color/color_333333"
+                    android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="16dp" />
 
                 <TextView
@@ -133,7 +133,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="5dp"
                     android:text="@string/self_limit_froze_impotent_3"
-                    android:textColor="@color/color_333333"
+                    android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="14dp" />
             </LinearLayout>
 
@@ -149,7 +149,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="·"
-                    android:textColor="@color/color_333333"
+                    android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="16dp" />
 
                 <TextView
@@ -157,7 +157,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="5dp"
                     android:text="@string/self_limit_froze_impotent_4"
-                    android:textColor="@color/color_333333"
+                    android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="14dp" />
             </LinearLayout>
 
@@ -173,7 +173,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="·"
-                    android:textColor="@color/color_333333"
+                    android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="16dp" />
 
                 <TextView
@@ -181,7 +181,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="5dp"
                     android:text="@string/self_limit_froze_impotent_5"
-                    android:textColor="@color/color_333333"
+                    android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="14dp" />
             </LinearLayout>
 
@@ -197,7 +197,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="·"
-                    android:textColor="@color/color_333333"
+                    android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="16dp" />
 
                 <TextView
@@ -205,7 +205,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="5dp"
                     android:text="@string/self_limit_froze_impotent_6"
-                    android:textColor="@color/color_333333"
+                    android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="14dp" />
             </LinearLayout>
 
@@ -234,7 +234,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="·"
-                    android:textColor="@color/color_333333"
+                    android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="16dp" />
 
                 <TextView
@@ -242,7 +242,7 @@
                     android:layout_height="wrap_content"
                     android:paddingStart="5dp"
                     android:text="@string/self_limit_bet_impotent"
-                    android:textColor="@color/color_333333"
+                    android:textColor="@color/color_e5e5e5_333333"
                     android:textSize="14dp" />
             </LinearLayout>
 
